components/builder-web/app/shared/visibility-selector/_visibility-selector.component.scss
.visibility-selector-component {

  .wrapper {
    display: flex;
    flex-direction: column;

    @include tablet-up {
      flex-direction: row;
    }

    .active {
      background-color: $very-light-gray;
    }

    .selector {
      flex: 1;
      border: $default-border;
      padding: $default-padding;
      border-radius: $default-radius;
      margin-bottom: $default-margin;

      h5 {
        margin-top: 0;
      }

      // MDC radio button: .mdc-form-field wraps the radio + label in a flex row
      .mdc-form-field {
        position: relative;
        align-items: flex-start;

        .mdc-radio {
          position: absolute;
          top: 0;
          left: 0;
        }

        .mdc-label {
          white-space: normal;
          margin-left: $default-margin;
          padding-left: $default-padding;

          hab-icon {
            margin-left: $small-margin;
          }
        }
      }

      @include tablet-up {
        &:first-of-type {
          margin-right: $default-margin;
        }
      }
    }
  }
}

